--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.HomeActivity">
+        <activity android:name=".activities.NotificationsListActivity"></activity>
+        <activity android:name=".activities.MyOrdersActivity" />
+        <activity android:name=".activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Activities.BalanceRequestDetails"></activity>
-        <activity android:name=".Activities.RequestBalance" />
-        <activity android:name=".Activities.SignUpActivity" />
-        <activity android:name=".Activities.LoginActivity"></activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".activities.SellCardActivity" />
+        <activity android:name=".activities.BalanceRequestsActivity" />
+        <activity android:name=".activities.BalanceRequestDetailsActivity" />
+        <activity android:name=".activities.RequestBalanceActivity" />
+        <activity android:name=".activities.SignUpActivity" />
+        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
