--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         <activity android:name=".activities.BalanceRequestDetailsActivity" />
         <activity android:name=".activities.RequestBalanceActivity" />
         <activity android:name=".activities.SignUpActivity" />
-        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.LoginActivity">
+
+        </activity>
         <activity android:name=".MainActivity" />
     </application>
 
